; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_exec.c_load_return_to_errno.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_exec.c_load_return_to_errno.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EBADARCH = common dso_local global i32 0, align 4
@EBADMACHO = common dso_local global i32 0, align 4
@ESHLIBVERS = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@EACCES = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4
@EIO = common dso_local global i32 0, align 4
@EBADEXEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @load_return_to_errno to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @load_return_to_errno(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %21 [
    i32 128, label %5
    i32 140, label %6
    i32 139, label %6
    i32 138, label %8
    i32 137, label %8
    i32 129, label %10
    i32 132, label %12
    i32 130, label %12
    i32 131, label %14
    i32 135, label %16
    i32 133, label %18
    i32 134, label %20
    i32 136, label %20
  ]

5:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %23

6:                                                ; preds = %1, %1
  %7 = load i32, i32* @EBADARCH, align 4
  store i32 %7, i32* %2, align 4
  br label %23

8:                                                ; preds = %1, %1
  %9 = load i32, i32* @EBADMACHO, align 4
  store i32 %9, i32* %2, align 4
  br label %23

10:                                               ; preds = %1
  %11 = load i32, i32* @ESHLIBVERS, align 4
  store i32 %11, i32* %2, align 4
  br label %23

12:                                               ; preds = %1, %1
  %13 = load i32, i32* @ENOMEM, align 4
  store i32 %13, i32* %2, align 4
  br label %23

14:                                               ; preds = %1
  %15 = load i32, i32* @EACCES, align 4
  store i32 %15, i32* %2, align 4
  br label %23

16:                                               ; preds = %1
  %17 = load i32, i32* @ENOENT, align 4
  store i32 %17, i32* %2, align 4
  br label %23

18:                                               ; preds = %1
  %19 = load i32, i32* @EIO, align 4
  store i32 %19, i32* %2, align 4
  br label %23

20:                                               ; preds = %1, %1
  br label %21

21:                                               ; preds = %1, %20
  %22 = load i32, i32* @EBADEXEC, align 4
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %21, %18, %16, %14, %12, %10, %8, %6, %5
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
